[gd_scene load_steps=4 format=2]

[ext_resource path="res://hitnhurtboxes/hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/0.0 Cave/BarkSalamanderEvent.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 564.621, 210.088 )

[node name="BarkSalamanderEvent" type="YSort"]
position = Vector2( 0, 29.1389 )
script = ExtResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 1 )]
collision_layer = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 567.705, 185.951 )
shape = SubResource( 1 )

[node name="popping_zone_center" type="Position2D" parent="."]
position = Vector2( 575.88, 780.711 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
